contrast prob fixed 5th

--- a/home_page.css
+++ b/home_page.css
@@ -44,5 +44,5 @@ li a {
 }
 .introofmetal {
     background-color: black;
-    width:150px;
+    width: 400px;
 }
